feat: refactoring code and polish